# 65816-computer

./: README.md  build.sh
.github/: Dockerfile
.github/workflows/: build.yml  github-actions-demo.yml
emulator/: .gitignore  CMakeLists.txt  LICENSE  README.md
emulator/include/: Ram.h  Ram.hpp
emulator/include/lib65816/: Cpu65816.hpp  Cpu65816Debugger.h  Cpu65816Debugger.hpp  Interrupt.h  OpCode.h  Stack.h  Stack.hpp  SystemBus.h  SystemBusDevice.hpp
emulator/include/logging/: Log.h
emulator/lib65816/: CMakeLists.txt  README.md
emulator/lib65816/include/: Addressing.hpp  Binary.hpp  CpuStatus.hpp  OpCode.hpp  SystemBus.hpp
emulator/lib65816/src/: Binary.cpp  Cpu65816Debugger.cpp
emulator/lib65816/src/opcodes/: OpCode_AND.cpp  OpCode_ASL.cpp  OpCode_BIT.cpp  OpCode_EOR.cpp  OpCode_LDA.cpp  OpCode_LDX.cpp  OpCode_ORA.cpp  OpCode_ROL.cpp  OpCode_ROR.cpp  OpCode_SBC.cpp  OpCode_STX.cpp  OpCode_TSB_TRB.cpp  OpCode_Transfer.cpp
emulator/lib65816_sample/: CMakeLists.txt  Makefile  README.md
emulator/lib65816_sample/src/: Ram.cpp  Ram.hpp  main.cpp
emulator/simple-logger/: CMakeLists.txt  Log.cpp  Log.hpp  README.md
emulator/src/: DebugSymbols.cpp  DebugSymbols.h  Ram.cpp  main.cpp  test.cpp
emulator/src/cpu/: Addressing.cpp  Addressing.h  Binary.h  BuildConfig.h  Cpu65816.cpp  Cpu65816.h  Cpu65816Debugger.cpp  Cpu65816Debugger.h  CpuStatus.h  DebugSymbols.cpp  DebugSymbols.h  Interrupt.h  OpCode.h  SpeedLimit.cpp  SpeedLimit.h  Stack.h  SystemBus.cpp  SystemBus.h  SystemBusDevice.cpp  SystemBusDevice.h
emulator/src/cpu/opcodes/: OpCodeTable.cpp  OpCode_ADC.cpp  OpCode_ASL.cpp  OpCode_BIT.cpp  OpCode_EOR.cpp  OpCode_INC_DEC.cpp  OpCode_Interrupt.cpp  OpCode_JumpReturn.cpp  OpCode_LSR.cpp  OpCode_Misc.cpp  OpCode_ORA.cpp  OpCode_ROL.cpp  OpCode_ROR.cpp  OpCode_SBC.cpp  OpCode_STA.cpp  OpCode_STY.cpp  OpCode_STZ.cpp  OpCode_StatusReg.cpp  OpCode_TSB_TRB.cpp  OpCode_Transfer.cpp
emulator/src/devices/: InterruptStatus.cpp  InterruptStatus.h  Ram.cpp  Ram.h  Rom.cpp  Rom.h  TerminalWrapper.cpp  TerminalWrapper.h  Uart.cpp  Uart.h  Via.cpp  Via.h
emulator/src/lib65816/: Addressing.cpp  Binary.cpp  Cpu65816.cpp  Cpu65816Debugger.cpp  CpuStatus.cpp  Stack.cpp  SystemBus.cpp  SystemBusDevice.cpp
emulator/src/lib65816/opcodes/: OpCodeTable.cpp  OpCode_ADC.cpp  OpCode_AND.cpp  OpCode_Branch.cpp  OpCode_CMP.cpp  OpCode_CPX_CPY.cpp  OpCode_INC_DEC.cpp  OpCode_Interrupt.cpp  OpCode_JumpReturn.cpp  OpCode_LDA.cpp  OpCode_LDX.cpp  OpCode_LDY.cpp  OpCode_LSR.cpp  OpCode_Misc.cpp  OpCode_SBC.cpp  OpCode_STA.cpp  OpCode_STX.cpp  OpCode_STY.cpp  OpCode_STZ.cpp  OpCode_Stack.cpp  OpCode_StatusReg.cpp
emulator/src/logging/: Log.cpp  Log.h
emulator/test/: DebugSymbolsFuzz.cpp  DebugSymbolsTest.cpp  test.cpp
emulator/test/resources/testing_example/: Makefile  README.md  example.s  system.cfg  test.dbg  test.lbl
hardware/gerber/65816-test-board-rev-1.0/: 65816-computer-B_Cu.gbr  65816-computer-B_Mask.gbr  65816-computer-B_Silkscreen.gbr  65816-computer-Edge_Cuts.gbr  65816-computer-F_Cu.gbr  65816-computer-F_Mask.gbr  65816-computer-F_Silkscreen.gbr  65816-computer-In1_Cu.gbr  65816-computer-In2_Cu.gbr  65816-computer-job.gbrjob  65816-computer.drl
hardware/kicad/: .gitignore  65816-computer.kicad_pcb  65816-computer.kicad_prl  65816-computer.kicad_pro  65816-computer.kicad_sch  cpu.kicad_sch  io.kicad_sch  memory.kicad_sch  project.kicad_sym  sym-lib-table
hardware/kicad/65c816-test-board/: 65816-computer.kicad_sch  generated_parts.lib  io.kicad_sch
hardware/kicad/i2c-test-board/: fp-lib-table  i2c-test-board.kicad_pcb  i2c-test-board.kicad_prl  i2c-test-board.kicad_pro  i2c-test-board.kicad_sch  project.kicad_sym  sym-lib-table
hardware/programmable_logic/: README.md  pin_to_csv.py
hardware/programmable_logic/address_decode/: address_decode.pld
kicad/: 65816-computer-cache.lib  65816-computer.kicad_pro  65816-computer.kicad_sch  65816-computer.sch  cpu.kicad_sch  cpu.sch  generated_parts.lib  io.kicad_sch  memory.kicad_sch  memory.sch  project.dcm  project.kicad_sym  project.lib  sym-lib-table
programmable_logic/: .gitignore
programmable_logic/address_decode/: Makefile  address_decode.pld
rom/: .gitignore  Makefile  address.s  c_test.s  interrupt.s  main.s  multitasking_test.s  post.s  sd_card.s  sd_test.s  system.cfg  uart.s  uart_test.s  vectors.s  xmodem.s
software/: .gitignore  Makefile
software/bootloader/: Makefile  boot.cfg  boot.s
software/build_tools/: ramfs.py  test_ramfs.py
software/hexdump/: Makefile  README.md  hexdump.cfg  hexdump.s
software/kernel/: Makefile  interrupt.s  main.s  panic.s  shell.s  wdccc_test.s
software/kernel/device/: uart.s
software/kernel_tmp/: Makefile  kernel_tmp.cfg  kernel_tmp.s
software/snake/: Makefile  main.s  random.s  random_test.s  snake.cfg  snake.s  test.cfg
